a few changes on data splitting

--- a/Code/01-split_data.ipynb
+++ b/Code/01-split_data.ipynb
@@ -348,8 +348,8 @@
    "outputs": [],
    "source": [
     "train_n_id = normal_all[:781] #70%\n",
-    "val_n_id = normal_all[781:893] #10%\n",
-    "test_n_id = normal_all[893:] #20%"
+    "test_n_id = normal_all[781:893] #10%\n",
+    "val_n_id = normal_all[893:] #20%"
    ]
   },
   {
@@ -390,14 +390,14 @@
     }
    ],
    "source": [
-    "val_n_list = [] #image name\n",
+    "test_n_list = [] #image name\n",
     "\n",
-    "for i in val_n_id:\n",
+    "for i in test_n_id:\n",
     "    for j in normal_list:\n",
     "        if i in j:\n",
-    "            val_n_list.append(j)\n",
+    "            test_n_list.append(j)\n",
     "    \n",
-    "print(len(val_n_list))"
+    "print(len(test_n_list))"
    ]
   },
   {
@@ -414,14 +414,14 @@
     }
    ],
    "source": [
-    "test_n_list = [] #image name\n",
+    "val_n_list = [] #image name\n",
     "\n",
-    "for i in test_n_id:\n",
+    "for i in val_n_id:\n",
     "    for j in normal_list:\n",
     "        if i in j:\n",
-    "            test_n_list.append(j)\n",
+    "            val_n_list.append(j)\n",
     "            \n",
-    "print(len(test_n_list))"
+    "print(len(val_n_list))"
    ]
   },
   {
@@ -490,8 +490,8 @@
    "outputs": [],
    "source": [
     "train_p_id = pneumonia_all[:1172] #70%\n",
-    "val_p_id = pneumonia_all[1172:1339] #10%\n",
-    "test_p_id = pneumonia_all[1339:] #20%"
+    "test_p_id = pneumonia_all[1172:1339] #10%\n",
+    "val_p_id = pneumonia_all[1339:] #20%"
    ]
   },
   {
@@ -532,14 +532,14 @@
     }
    ],
    "source": [
-    "val_p_list = [] #image name\n",
+    "test_p_list = [] #image name\n",
     "\n",
-    "for i in val_p_id:\n",
+    "for i in test_p_id:\n",
     "    for j in pneumonia_list:\n",
     "        if i in j:\n",
-    "            val_p_list.append(j)\n",
+    "            test_p_list.append(j)\n",
     "            \n",
-    "print(len(val_p_list))"
+    "print(len(test_p_list))"
    ]
   },
   {
@@ -556,14 +556,14 @@
     }
    ],
    "source": [
-    "test_p_list = [] #image name\n",
+    "val_p_list = [] #image name\n",
     "\n",
-    "for i in test_p_id:\n",
+    "for i in val_p_id:\n",
     "    for j in pneumonia_list:\n",
     "        if i in j:\n",
-    "            test_p_list.append(j)\n",
+    "            val_p_list.append(j)\n",
     "            \n",
-    "print(len(test_p_list))"
+    "print(len(val_p_list))"
    ]
   },
   {
@@ -692,16 +692,16 @@
     }
    ],
    "source": [
-    "data3 = {'image_index':val_p_list,\n",
+    "data3 = {'image_index':test_p_list,\n",
     "         'class':'pneumonia',\n",
     "         'label': 1}\n",
-    "data4 = {'image_index':val_n_list,\n",
+    "data4 = {'image_index':test_n_list,\n",
     "         'class':'normal',\n",
     "         'label': 0}\n",
     "df3 = pd.DataFrame(data3)\n",
     "df4 = pd.DataFrame(data4)\n",
-    "df_val = pd.concat([df3, df4], axis = 0)\n",
-    "df_val.shape"
+    "df_test = pd.concat([df3, df4], axis = 0)\n",
+    "df_test.shape"
    ]
   },
   {
@@ -721,16 +721,16 @@
     }
    ],
    "source": [
-    "data5 = {'image_index':test_p_list,\n",
+    "data5 = {'image_index':val_p_list,\n",
     "         'class':'pneumonia',\n",
     "         'label': 1}\n",
-    "data6 = {'image_index':test_n_list,\n",
+    "data6 = {'image_index':val_n_list,\n",
     "         'class':'normal',\n",
     "         'label': 0}\n",
     "df5 = pd.DataFrame(data5)\n",
     "df6 = pd.DataFrame(data6)\n",
-    "df_test = pd.concat([df5, df6], axis = 0)\n",
-    "df_test.shape"
+    "df_val = pd.concat([df5, df6], axis = 0)\n",
+    "df_val.shape"
    ]
   },
   {
@@ -748,20 +748,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "train: (70% patients)\n",
+    "**train: (70% patients)**\n",
     "normal: 1095 images, 781 patients\n",
+    "\n",
     "pneumonia: 2949 images, 1172 patients\n",
+    "\n",
     "normal image/train image: 0.271\n",
     "\n",
-    "validation: (10% patients)\n",
+    "**test: (10% patients)**\n",
+    "\n",
     "normal: 159 images, 112 patients\n",
+    "\n",
     "pneumonia: 443 images, 167 patients\n",
+    "\n",
     "normal image/test image: 0.264\n",
     "\n",
-    "test: (20% patients)\n",
+    "**validation: (20% patients)**\n",
+    "\n",
     "normal: 329 images, 223 patients\n",
+    "\n",
     "pneumonia: 881 images, 335 patients\n",
-    "normal image/test image: 0.272\n",
+    "\n",
+    "normal image/val image: 0.272\n",
     "\n",
     "NO DATA LEAKAGE!"
    ]
