--- a/Code/visualization_CAM.ipynb
+++ b/Code/visualization_CAM.ipynb
@@ -2375,7 +2375,7 @@
     "id": "g9gpq5Dwf-U8"
    },
    "source": [
-    "!['normal'](NORMAL2-IM-0276-0001_true_normal_pred_normal_googlenet.jpeg)"
+    "!['normal'](./vis_result/NORMAL2-IM-0276-0001_true_normal_pred_normal_googlenet.jpeg)"
    ]
   },
   {
@@ -2395,7 +2395,7 @@
     "id": "aucBLg31f-U7"
    },
    "source": [
-    "!['virus'](person1657_virus_2864_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
+    "!['virus'](./vis_result/person1657_virus_2864_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
    ]
   },
   {
@@ -2415,7 +2415,7 @@
     "id": "V966UoyXf-U7"
    },
    "source": [
-    "!['bacteria'](person134_bacteria_643_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
+    "!['bacteria'](./vis_result/person134_bacteria_643_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
    ]
   },
   {
@@ -2448,7 +2448,7 @@
     "id": "eCT9CILkf-Uk"
    },
    "source": [
-    "!['Normal'](2classNORMAL2-IM-0359-0001_true_normal_pred_normal_googlenet.jpeg)"
+    "!['Normal'](./vis_result/test_pics/2classNORMAL2-IM-0359-0001_true_normal_pred_normal_googlenet.jpeg)"
    ]
   },
   {
@@ -2468,7 +2468,7 @@
     "id": "i4kNJnGef-Uj"
    },
    "source": [
-    "!['pneumonia'](2classperson1651_virus_2855_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
+    "!['pneumonia'](./vis_result/test_pics/2classperson1651_virus_2855_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
    ]
   },
   {
@@ -2488,7 +2488,7 @@
     "id": "r_i6Tk1Of-Uj"
    },
    "source": [
-    "!['penumonia(bac)'](2classperson100_bacteria_478_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
+    "!['penumonia(bac)'](./vis_result/test_pics/2classperson100_bacteria_478_true_pneumonia_pred_pneumonia_googlenet.jpeg)"
    ]
   },
   {
@@ -2905,7 +2905,7 @@
     "id": "OPQD3HVYf-UR"
    },
    "source": [
-    "!['normal'](3classNORMAL2-IM-0359-0001_true_normal_pred_normal_googlenet.jpeg)"
+    "!['normal'](./vis_result/test_pics/3classNORMAL2-IM-0359-0001_true_normal_pred_normal_googlenet.jpeg)"
    ]
   },
   {
@@ -2925,7 +2925,7 @@
     "id": "eCaowMRkf-UP"
    },
    "source": [
-    "![\"virus\"](3classperson1651_virus_2855_true_virus_pred_virus_googlenet.jpeg)"
+    "![\"virus\"](./vis_result/test_pics/3classperson1651_virus_2855_true_virus_pred_virus_googlenet.jpeg)"
    ]
   },
   {
@@ -2945,7 +2945,7 @@
     "id": "TrqDJZcWf-UQ"
    },
    "source": [
-    "!['bacteria'](3classperson100_bacteria_478_true_bacteria_pred_bacteria_googlenet.jpeg)"
+    "!['bacteria'](./vis_result/test_pics/3classperson100_bacteria_478_true_bacteria_pred_bacteria_googlenet.jpeg)"
    ]
   }
  ],
